# community.beszel

./: .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  MAINTAINERS  README.md  antsibull-nox.toml  codecov.yml  flake8.ini  galaxy.yml  noxfile.py  pyproject.toml  tox-ansible.ini
.claude/skills/changelogs/: SKILL.md
.claude/skills/commit/: SKILL.md
.github/workflows/: ansible-lint.yml  ansible-molecule.yml  ansible-test.yml  antsibull-nox.yml  certification.yml  tox-ansible.yml
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: 0.1.0.yml  0.2.0.yml  0.3.0.yml  0.4.0.yml  0.5.0.yml  0.6.0.yml  0.6.1.yml  0.6.2.yml  0.7.0.yml  0.7.1.yml  0.7.2.yml  1.0.0.yml  agent-role-argument-spec.yml  hub-server-host-variable.yml  openrc-support.yml
docs/docsite/: links.yml
extensions/molecule/: docker-compose.yml
extensions/molecule/agent_absent/: converge.yml  create.yml  destroy.yml  molecule.yml
extensions/molecule/agent_airgap/: .gitignore  converge.yml  create.yml  destroy.yml  molecule.yml
extensions/molecule/agent_default/: common.yml  converge.yml  create.yml  destroy.yml  molecule.yml
extensions/molecule/agent_openrc/: converge.yml  create.yml  destroy.yml  molecule.yml  prepare.yml  verify.yml
extensions/molecule/agent_token/: converge.yml  create.yml  destroy.yml  molecule.yml
extensions/molecule/common/: beszel_public_key.yml  create.yml  destroy.yml
extensions/molecule/hub_default/: converge.yml  destroy.yml  molecule.yml  verify.yml
meta/: ee-requirements.txt  runtime.yml
plugins/module_utils/: pocketbase_utils.py
plugins/modules/: system.py  system_info.py  universal_token.py
roles/agent/: README.md
roles/hub/: README.md
tests/integration/: requirements.txt
tests/sanity/: ignore-2.21.txt
(+40 files in other folders)
