[project]
name = "community-beszel"
version = "0.6.2"
description = "Ansible community collection for Beszel."
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "ansible-core==2.20.0",
    "pocketbase>=0.15.0",
]

[dependency-groups]
dev = [
    "antsibull-changelog[toml]>=0.34.0",
    "antsibull-nox",
    "codespell>=2.4.1",
    "prek>=0.2.20",
    {include-group = "test"},
]
test = [
    "molecule>=25.12.0",
    "molecule-plugins[docker]>=25.8.12",
    "jmespath==1.0.1"
]

[tool.uv.sources]
antsibull-nox = { git = "https://github.com/ansible-community/antsibull-nox", rev = "a4f9b2f" }
