[project]
name = "community-beszel"
version = "1.0.0"
description = "Ansible community collection for Beszel."
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "ansible-core==2.20.0",
    "pocketbase>=0.15.0"
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "prek>=0.2.20",
    {include-group = "test"},
]
test = [
    "ruff>=0.15.10",
    "jmespath>=1.0.1",
    "yamllint>=1.38.0",
    "flake8>=7.3.0",
    "tox-uv-bare>=1.35.1",
    "tox-ansible>=26.3.0",
]
